--- a/views/index.html
+++ b/views/index.html
@@ -79,7 +79,7 @@
          
          </main>
          <footer class="footer">
-            <img src="/img/logo-web.png" alt="">
+            <img class = "img__footer"src="/img/logo-web.png" alt="">
             <section class="section__footer">
             <h2>contacto
             </h2>
