--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,4 @@
-.main__menu{
-    
 
-}
 .header__1{
     text-align: center;
     width: 100vw;
@@ -23,35 +20,68 @@
 
 .foto__entradas{
     border: solid gainsboro;
-    width: 100vw;
+    width: 100%;
     height: 200px;
   }
 .section__menu{
     width: 100vw;
+}
+.img__footer{
+    padding-left: 10px;
+    align-items: center;
+    width: 100%;
 }
 .footer{
     width: 100vw;
     background-color: gainsboro;
     border-top: solid 20px gainsboro;
     color: #fafafa;
+    text-align: center;
 }
 .section__footer ul{
     padding-left: 0px;
 }
-/* .main__menu{
+@media (min-width: 1024px) {
+.header__1{
+    text-align: left;
+    width: 100%;
+    padding-left: 40px;
+}
+.link__carta{
+    display: inline-block;
+    width: 400px;
+}
+.main__menu{
     display: flex;
     justify-content: space-around;
     margin-bottom: 10px;
 }
- */
-/* .article__entradas{
+.foto__entradas{
+    width: 200px;
+    height: 150px;
+    position: absolute;
+    top: 155px;
+    left: 850px 
+}
+ 
+.article__entradas{
     border-left: solid gainsboro;
-    padding-left: 100px; */
-
-/* .section__footer{
+    padding-left: 100px; 
+}
+.section__footer{
     display: flex;
     margin-left: 450px;
     flex-direction: column;
     align-items: flex-start;
     justify-content: stretch;
-}  */
+} 
+
+footer{
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+    background-color: gainsboro;
+    border-top: solid 20px gainsboro;
+    color: #fafafa;
+}  
+}
